# agent-learning

./: .gitignore  MISSION.md  NOTES.md  README.md  RESOURCES.md  pyproject.toml
assets/: lesson.css
docs/superpowers/plans/: 2026-07-12-prompt-engineering-tutorial.md
docs/superpowers/specs/: 2026-07-12-prompt-engineering-tutorial-design.md
learning-records/: 0001-tool-calling闭环.md
lessons/: 0001-tool-calling闭环.html  0002-工具错误重试与循环终止.html  0003-Agent循环与状态.html  0004-重复工具调用与预算控制.html  0005-工具定义与参数校验.html  0006-Tool类型与风险分级.html  0007-写操作Tool的幂等与人工确认.html  0008-请求幂等与业务幂等.html  0009-退款状态机与异常恢复.html  0010-Agent短期记忆与多轮对话.html
notes/: Agent基础四模块面试题.md  FastAPI学习笔记.md  Transformer基础笔记.md  工具调用ToolCalling笔记.md  提示词工程系统教程.md
notes/Agent基础/: Agent基础四模块面试标准答案.md  Agent架构模式笔记.md  Agent核心概念笔记.md  Agent记忆系统Memory笔记.md
notes/Agent开发实战/: 00-Pydantic基础.md  01-LangChain基础.md  01-Pydantic基础.md  02-LangChain基础.md  02-Runnable与LCEL深入.md  03-LangChainTools.md  03-Runnable与LCEL深入.md  04-LangChainAgent.md  04-LangChainTools.md  05-LangChainAgent.md  05-上下文与Memory.md  06-上下文与Memory.md  06-生产级工具集成.md  07-Agent安全与中间件.md  07-生产级工具集成.md  08-Agent安全与中间件.md  08-文档加载与切分.md  09-Embedding与向量存储.md  09-LangGraph基础.md  10-LangGraph进阶流程.md  10-Retriever与标准RAG.md  11-AgenticRAG.md  11-持久化与人工介入.md  12-LangGraph基础.md  12-调试评测与性能优化.md  13-LangGraph进阶流程.md  14-持久化与人工介入.md  15-调试评测与性能优化.md  README.md
notes/RAG开发实战/: 01-RAG基础概念与核心组件.md  02-RAG技术实现.md  README.md
notes/大模型基础/: Token和上下文窗口笔记.md  从函数到Transformer重写整理笔记.md  大模型的能力与局限性笔记.md
notes/提示词工程/: 提示词工程系统教程.md  提示词工程面试题 01-35.md
practice/01-llm-api/: README.md
practice/01-llm-api/tests/: test_cli.py
practice/02-tool-calling/: README.md
practice/02-tool-calling/tests/: test_agent.py  test_live_api.py  test_sales.py
practice/03-agent-loop/: README.md
practice/03-agent-loop/tests/: test_agent.py
practice/03-safe-write-tool/: README.md  pyproject.toml
practice/03-safe-write-tool/src/safe_write_tool_practice/: __init__.py  refunds.py  state.py  tools.py
practice/03-safe-write-tool/tests/: test_refunds.py  test_state.py  test_tools.py
practice/04-agent-memory/: README.md  pyproject.toml
practice/05-langchain-basics/: README.md
practice/06-langchain-runnables/: .env.example  README.md  pyproject.toml
practice/06-langchain-runnables/src/langchain_runnables/: cli.py
practice/06-langchain-runnables/tests/: test_runnables.py
practice/07-langchain-tools/: README.md
practice/08-langchain-agent/: README.md
practice/09-langchain-memory/: README.md
practice/10-production-tools/: README.md
practice/11-agent-middleware/: README.md  pyproject.toml
practice/12-document-processing/: README.md  pyproject.toml
practice/12-document-processing/src/document_processing/: __init__.py
practice/12-document-processing/tests/: test_pipeline.py
practice/13-vector-store/: README.md  pyproject.toml
practice/14-rag-chain/: README.md
practice/15-agentic-rag/: README.md  pyproject.toml
practice/16-langgraph-basics/: .env.example  README.md
practice/17-langgraph-workflow/: .env.example  README.md  pyproject.toml
practice/18-langgraph-persistence/: README.md
practice/19-agent-evaluation/: README.md
practice/Agent开发实战/: README.md
practice/Agent开发实战/01-langchain-basics/: .env.example  README.md  pyproject.toml
practice/Agent开发实战/01-langchain-basics/src/langchain_basics/: __init__.py  chains.py  cli.py
practice/Agent开发实战/01-langchain-basics/tests/: test_chains.py  test_messages.py  test_structured.py
practice/Agent开发实战/03-langchain-tools/: README.md  pyproject.toml
practice/Agent开发实战/03-langchain-tools/src/lc_tools/: __init__.py
practice/Agent开发实战/08-langgraph-basics/: README.md  pyproject.toml
practice/Agent开发实战/08-langgraph-basics/src/langgraph_basics/: __init__.py
practice/Agent开发实战/11-agent-evaluation/: README.md  pyproject.toml
practice/Agent开发实战/11-agent-evaluation/src/agent_evaluation/: __init__.py  evaluate.py
practice/RAG开发实战/: README.md
practice/基础接口/: README.md
practice/基础接口/02-tool-calling/: README.md  pyproject.toml
practice/基础接口/02-tool-calling/src/tool_calling_practice/: cli.py  config.py
practice/基础接口/02-tool-calling/tests/: test_cli.py  test_config.py  test_tools.py
practice/基础接口/03-agent-loop/: README.md  pyproject.toml
practice/基础接口/03-agent-loop/src/agent_loop_practice/: agent.py  cli.py  config.py  sales.py
practice/基础接口/03-agent-loop/tests/: test_tools.py
reference/: Agent循环代码速查表.md  Agent短期记忆速查表.md  Tool类型与风险分级速查表.md  tool-calling-速查表.md  业务幂等速查表.md  写操作Tool安全速查表.md  工具定义与参数校验速查表.md  工具错误与重试速查表.md  退款状态机速查表.md  重复调用与预算控制速查表.md
(+92 files in other folders)
