[project]
name = "safe-write-tool-practice"
version = "0.1.0"
description = "Agent learning practice: safe write tools with authorization and idempotency"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
