[project]
name = "agent-middleware-practice"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = ["langchain>=1.3.14,<2", "langchain-openai>=1.3.5,<2", "python-dotenv>=1"]

[project.scripts]
guarded-agent = "agent_middleware_practice.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

