[project]
name = "document-processing-practice"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = ["langchain-core>=1.4.9,<2", "langchain-text-splitters>=1,<2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

