[project]
name = "langgraph-basics-practice"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = ["langgraph>=1,<2", "langchain-openai>=1.3.5,<2", "python-dotenv>=1"]

[project.scripts]
langgraph-basics = "langgraph_basics.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

