[project]
name = "agent-evaluation-practice"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = ["pydantic>=2,<3"]

[project.scripts]
agent-evaluate = "agent_evaluation.evaluate:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

