[project]
name = "tool-calling-practice"
version = "0.1.0"
description = "Agent learning practice: implement one round of Tool Calling"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sales-chat = "tool_calling_practice.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
