[project]
name = "agent-loop-practice"
version = "0.1.0"
description = "Agent learning practice: implement an Agent loop from scratch"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent-chat = "agent_loop_practice.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
